<resources>
    <string name="app_name">Cooperative Trip</string>
    <string name="title_activity_maps">Map</string>
    <string name="titulo_nuevo_viaje">Origen y destino del viaje</string>
    <string name="salida">Origen</string>
    <string name="destino">Destino</string>
    <string name="titulo_fecha_hora">Fecha y hora</string>
    <string name="titulo_fecha">Fecha</string>
    <string name="titulo_hora">Hora</string>
    <string name="titulo_tiempo_estimado">Tiempo estimado</string>
    <string name="titulo_asientos">Asientos</string>
    <string name="titulo_precio">Precio</string>
    <string name="title_activity_login">Sign in</string>
    <string name="crear_viaje">Crear viaje</string>
    <string name="escalas">Escalas</string>
    <string name="recoger">Puntos de recogida</string>
    <string name="agregar_escala">Agregar escala</string>
    <string name="agregar_recoger">Agregar punto</string>
    <string name="nombre_viaje">Elige el nombre de tu viaje</string>
    <string name="titulo_elije_vehiculo">Elige el vehículo para el viaje</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">Esta dirección de correo es inválida</string>
    <string name="error_invalid_password">La contraseña es muy corata</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">Se requieren permisos para leer contactos para autocompletar este campo</string>
    <string name="title_activity_nuevo_viaje">NuevoViaje</string>


    <string name="error_no_internet">Se requiere conexión a internet para utilizar los servicios de Google</string>
    <string name="error_no_rest_conection">No hay conexión con el servidor</string>
    <string name="error_desconocido">Ocurrío un error desconocido, intenta nuevamente</string>


    <string name="error_no_nombre">Debe elegir un nombre para su viaje</string>
    <string name="error_no_origen">Indique un punto de origen</string>
    <string name="error_no_destino">Indique un punto de destino</string>
    <string name="error_no_fecha">Indique la fecha del viaje</string>
    <string name="error_no_hora">Indique la hora del viaje</string>
    <string name="error_no_asientos">Indique el número de asientos</string>
    <string name="error_no_precio">El precio para el viaje es incorrecto</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_no_viajes">No tienes viajes creados</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
