<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.iteso.pam2017.a705164.cooperativetrip.MostrarViajeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_nombre"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Nombre:"
                        android:textAlignment="viewEnd"
                        android:textColor="#444" />

                    <TextView
                        android:id="@+id/tv_nombre_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_nombre"
                        android:textAlignment="center"
                        android:text="contenido"/>

                    <TextView
                        android:id="@+id/tv_origen"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="Origen:"
                        android:textAlignment="viewEnd"
                        android:layout_below="@+id/tv_nombre"
                        android:textColor="#444" />

                    <TextView
                        android:id="@+id/tv_origen_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_origen"
                        android:layout_below="@+id/tv_nombre_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="20dp"
                        android:text="contenido"
                        android:maxLines="1"/>

                    <TextView
                        android:id="@+id/tv_destino"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="Destino:"
                        android:textAlignment="viewEnd"
                        android:layout_below="@+id/tv_origen"
                        android:textColor="#444" />

                    <TextView
                        android:id="@+id/tv_destino_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_destino"
                        android:layout_below="@+id/tv_origen_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="20dp"
                        android:text="contenido"
                        android:maxLines="1"/>

                    <LinearLayout
                        android:id="@+id/ll_fecha_hora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/tv_destino">
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight=".35"
                            android:layout_below="@id/tv_destino"
                            android:layout_alignParentLeft="true"
                            android:text="Fecha"
                            android:layout_marginTop="10dp"
                            android:textAlignment="viewEnd"
                            android:textColor="#444"/>


                        <TextView
                            android:id="@+id/tv_fecha_content"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="20dp"
                            android:textAlignment="center"
                            android:text="contenido"
                            android:maxLines="1"/>

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.35"
                            android:layout_below="@id/tv_destino"
                            android:layout_alignParentLeft="true"
                            android:text="Hora"
                            android:layout_marginTop="10dp"
                            android:textAlignment="viewEnd"
                            android:textColor="#444"/>


                        <TextView
                            android:id="@+id/tv_hora_content"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="20dp"
                            android:textAlignment="center"
                            android:text="contenido"
                            android:maxLines="1"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_vehiculo"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="Vehículo:"
                        android:textAlignment="viewEnd"
                        android:layout_below="@+id/ll_fecha_hora"
                        android:textColor="#444" />

                    <TextView
                        android:id="@+id/tv_vehiculo_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_vehiculo"
                        android:layout_below="@+id/ll_fecha_hora"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="20dp"
                        android:text="contenido"
                        android:maxLines="1"/>
                    <View
                        android:id="@+id/divider_precio"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_below="@+id/tv_vehiculo"
                        style="@style/Divider"/>

                    <TextView
                        android:id="@+id/tv_precio"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="Precio:"
                        android:textAlignment="viewEnd"
                        android:layout_below="@+id/divider_precio"
                        android:textColor="#444" />

                    <TextView
                        android:id="@+id/tv_precio_content"
                        android:layout_width="match_parent"
                        android:layout_marginRight="50dp"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_precio"
                        android:layout_below="@+id/divider_precio"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="20dp"
                        android:text="contenido"/>
                    <TextView
                        android:id="@+id/tv_precio_mxn"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/divider_precio"
                        android:layout_alignRight="@+id/tv_precio_content"
                        android:layout_marginTop="10dp"
                        android:text="MXN"/>

                    <TextView
                        android:id="@+id/tv_asientos_total"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="Total asientos:"
                        android:textAlignment="viewEnd"
                        android:layout_below="@+id/tv_precio"
                        android:textColor="#444" />

                    <TextView
                        android:id="@+id/tv_asientos_total_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_asientos_total"
                        android:layout_below="@+id/tv_precio_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="20dp"
                        android:text="contenido"/>

                    <TextView
                        android:id="@+id/tv_asientos_total_libres"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="Asientos libres:"
                        android:textAlignment="viewEnd"
                        android:layout_below="@+id/tv_asientos_total"
                        android:textColor="#444" />

                    <TextView
                        android:id="@+id/tv_asientos_total_libres_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_asientos_total_libres"
                        android:layout_below="@+id/tv_asientos_total_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="20dp"
                        android:text="contenido"/>


                </RelativeLayout>
                <View
                    android:id="@+id/chofer_divider"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    style="@style/Divider"/>
                <RelativeLayout
                    android:id="@+id/rl_usuario_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/tv_usuario_nombre"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="Chofer:"
                        android:textAlignment="viewEnd"
                        android:textColor="#444" />

                    <TextView
                        android:id="@+id/tv_usuario_nombre_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_usuario_nombre"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="20dp"
                        android:text="contenido"
                        android:maxLines="1"/>

                    <TextView
                        android:id="@+id/tv_usuario_telefono"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="Teléfono:"
                        android:textAlignment="viewEnd"
                        android:layout_below="@+id/tv_usuario_nombre"
                        android:textColor="#444" />

                    <TextView
                        android:id="@+id/tv_usuario_telefono_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_usuario_telefono"
                        android:layout_below="@+id/tv_usuario_nombre_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="20dp"
                        android:text="contenido"
                        android:maxLines="1"/>
                </RelativeLayout>

                <!-- los otros layouts -->
                <View
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    style="@style/Divider"/>
                <!-- los otros layouts -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/escalas"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <ListView
                    android:id="@+id/lv_escalas"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">
                </ListView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recoger"
                    android:textSize="20sp"
                    android:textAlignment="center" />
                <ListView
                    android:id="@+id/lv_pick_up"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">
                </ListView>

                <Button
                    android:id="@+id/btn_accion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:text="@string/crear_viaje" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>
